# BarterLoops

./: README.md
Barter-CPP/: docker-compose.yml
Barter-CPP/backend/: CMakeLists.txt  Dockerfile
Barter-CPP/backend/src/: main.cpp
Barter-CPP/frontend/: Dockerfile  nginx.conf
Barter-CPP/frontend/public/: app.js  index.html
Barter-Python/: README.md  docker-compose.yml  run.bat  run.ps1  run.sh
Barter-Python/backend/: Dockerfile  main.py
Barter-Python/frontend/: Dockerfile  README.md  index.html
